# mlx_glfw

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  mlx.h  mlx_consts.h  opengl.h
includes/glad/: glad.h
shaders/: fragment.glsl  vertex.glsl
src/: fps_meter.c  framebuffer.c  glad.c  hook.c  main.c  mlx.c  mlx_image.c  mlx_keys.c  mlx_string.c  shader.c
